:fix: Custom cursor display on mobile device

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -98,4 +98,8 @@ section:not(:first-of-type) {
   margin: 8rem 0;
 }
 
+#cursor {
+  display: none;
+}
+
 @import 'responsive';
