--- a/client/src/responsive.scss
+++ b/client/src/responsive.scss
@@ -44,6 +44,7 @@
 @media (min-width:$medium), (pointer:coarse) {
     // CURSOR
     #cursor {
+        display: block;
         width: 20px;
         height: 20px;
         border-bottom: 20px solid var(--colorSecondary);
